tests/variables/invalid/syntax_err_bad_decl_2.amu
s32 main() {
    s32 foo bar = 3;
    return bar;
}